Fixed the alignment for the buttons and added the visualization name.

--- a/packages/client-mav/src/app/make-a-vis/visualization-view/scatter-graph/scatter-graph.component.scss
+++ b/packages/client-mav/src/app/make-a-vis/visualization-view/scatter-graph/scatter-graph.component.scss
@@ -1,27 +1,42 @@
 .scatter-graph {
   .container {
-    width: 100%;
-    height: 54.5rem;
     display: flex;
 
-    .y-axis-buttons {
+    .y-axis {
       width: 15.625rem;
+
+      .visualization-name {
+        font-size: 3rem;
+        font-family: Paytone;
+        color: #006298;
+        text-align: center;
+        font-weight: bold;
+      }
+
+      .buttons {
+        margin-top: 3rem;
+      }
+
     }
 
     .visualization {
-      width: 88.75rem;
+      width: calc(100vw - 31.25rem);
 
       .visualization-area {
-        height: 85%;
+        height: calc(100vh - 23rem);
       }
 
       .x-axis-buttons {
-        height: 15%;
+        height: 10rem;
+        padding: 3rem 0;
+        display:flex;
+        justify-content: center
       }
     }
 
     .graphic-variables-selection {
       width: 15.625rem;
+      margin: auto;
 
       :not(:last-child) {
         margin-bottom: 3rem;
